# data-pipeline-lab

./: .env  Dockerfile  Makefile  README.md  docker-compose.win.yml  prefect.yaml  prefect_deploy.py  pyproject.toml
etl/: __main__.py  api.py  bronze.py  config.py  db.py  flow.py  gold.py  quality.py  silver.py
sql/: analiyics_examples.sql
sql/migrations/: 01_create_schemas.sql  02_create_raw_tables.sql  03_create_silver_tables.sql  04_create_gold_tables.sql
